blog added and exact project

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
     <!-- Header & Navigation -->
     <header>
         <nav>
-            <a href="#" class="logo">Miqdad<span>.</span></a>
+            <a href="#" class="logo">Imaam_Deecoder<span>.</span></a>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#skills">Skills</a>
@@ -648,7 +648,6 @@
                     <li><i class="fas fa-check"></i> HTML5</li>
                     <li><i class="fas fa-check"></i> CSS3</li>
                     <li><i class="fas fa-check"></i> React</li>
-                    <li><i class="fas fa-check"></i> Angular</li>
                 </ul>
             </div>
             <div class="skill-category">
@@ -657,7 +656,6 @@
                     <li><i class="fas fa-check"></i> Node.js</li>
                     <li><i class="fas fa-check"></i> Express</li>
                     <li><i class="fas fa-check"></i> Django</li>
-                    <li><i class="fas fa-check"></i> PostgreSQL</li>
                 </ul>
             </div>
             <div class="skill-category">
@@ -674,7 +672,6 @@
                     <li><i class="fas fa-check"></i> Git</li>
                     <li><i class="fas fa-check"></i> VS Code</li>
                     <li><i class="fas fa-check"></i> Figma</li>
-                    <li><i class="fas fa-check"></i> Webpack</li>
                 </ul>
             </div>
         </div>
@@ -695,20 +692,21 @@
             <!-- Web Development Projects -->
             <div class="project-card" data-category="web">
                 <div class="project-img">
-                    <i class="fas fa-shop"></i>
+                 <i class="fas fa-bread-slice"></i>
                 </div>
                 <div class="project-content">
-                    <h3>E-Commerce Platform</h3>
-                    <p>A full-featured online store with product listings, shopping cart, and secure payment processing.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">React</span>
-                        <span class="tech-tag">Node.js</span>
-                        <span class="tech-tag">MongoDB</span>
-                        <span class="tech-tag">Stripe</span>
+                   <h3>Nexvory Artisan Bakery</h3>
+<p>An online storefront for handcrafted breads, pastries, and custom cakes with local ingredients and beautiful presentation.</p>
+<div class="project-tech">
+    <span class="tech-tag">HTML</span>
+    <span class="tech-tag">CSS</span>
+    <span class="tech-tag">JavaScript</span>
+    <span class="tech-tag">Netlify</span>
+
                     </div>
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="#"><i class="fab fa-github"></i> GitHub</a>
+                        <a href="de-nexvory.netlify.app"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/Imamdecodee/nexvory.git"><i class="fab fa-github"></i> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -718,16 +716,17 @@
                     <i class="fas fa-task"></i>
                 </div>
                 <div class="project-content">
-                    <h3>Task Management App</h3>
-                    <p>A productivity application for creating, organizing, and tracking tasks with team collaboration features.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Angular</span>
-                        <span class="tech-tag">Express</span>
-                        <span class="tech-tag">PostgreSQL</span>
-                        <span class="tech-tag">JWT</span>
+                    <h3>Ilm Nexus – Digital Skills Bootcamp</h3>
+<p>An online learning platform offering practical courses in web design, video editing, graphics, social media marketing, and entrepreneurship — helping students build income-earning skills before graduation.</p>
+<div class="project-tech">
+    <span class="tech-tag">HTML</span>
+    <span class="tech-tag">CSS</span>
+    <span class="tech-tag">JavaScript</span>
+    <span class="tech-tag">Netlify</span>
+
                     </div>
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://nexus-learn.netlify.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         <a href="#"><i class="fab fa-github"></i> GitHub</a>
                     </div>
                 </div>
@@ -739,15 +738,17 @@
                     <i class="fas fa-paint-brush"></i>
                 </div>
                 <div class="project-content">
-                    <h3>Brand Identity Design</h3>
-                    <p>Complete brand identity package including logo, color scheme, typography, and brand guidelines.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Figma</span>
-                        <span class="tech-tag">Illustrator</span>
-                        <span class="tech-tag">Photoshop</span>
-                    </div>
+                    <h3>Al-Ameen Spark</h3>
+<p>An educational platform supporting online lectures, interactive lessons, and student engagement to boost learning outcomes.</p>
+<div class="project-tech">
+    <span class="tech-tag">React</span>
+    <span class="tech-tag">CSS</span>
+    <span class="tech-tag">JavaScript</span>
+    <span class="tech-tag">Netlify</span>
+</div>
+
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> View Project</a>
+                        <a href="https://al-ameen-spark.netlify.app/"><i class="fas fa-external-link-alt"></i> View Project</a>
                         <a href="#"><i class="fab fa-behance"></i> Behance</a>
                     </div>
                 </div>
@@ -755,18 +756,21 @@
 
             <div class="project-card" data-category="design">
                 <div class="project-img">
-                    <i class="fas fa-pencil-alt"></i>
+                <i class="fas fa-shipping-fast"></i>
                 </div>
                 <div class="project-content">
-                    <h3>UI/UX Design</h3>
-                    <p>User interface and experience design for a mobile application with focus on accessibility and usability.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Figma</span>
-                        <span class="tech-tag">Adobe XD</span>
-                        <span class="tech-tag">Prototyping</span>
+                    <h3>Express Royal Services Ltd.</h3>
+<p>A professional services company offering shipping, logistics, and courier solutions for businesses and individuals.</p>
+<div class="project-tech">
+    <span class="tech-tag">HTML</span>
+    <span class="tech-tag">CSS</span>
+    <span class="tech-tag">JavaScript</span>
+    <span class="tech-tag">Bootstrap</span>
+
+
                     </div>
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> View Project</a>
+                        <a href="expressroyalserviceltd.com"><i class="fas fa-external-link-alt"></i> View Project</a>
                         <a href="#"><i class="fab fa-behance"></i> Behance</a>
                     </div>
                 </div>
@@ -777,15 +781,17 @@
                     <i class="fas fa-bullhorn"></i>
                 </div>
                 <div class="project-content">
-                    <h3>Marketing Materials</h3>
-                    <p>Series of marketing collateral including brochures, flyers, and social media graphics for a client campaign.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Illustrator</span>
-                        <span class="tech-tag">InDesign</span>
-                        <span class="tech-tag">Photoshop</span>
-                    </div>
+                   <h3>ILM-NEXUS Student Platform</h3>
+<p>A student-led hub that promotes leadership, collaboration, and skill development through events, news and community engagement.</p>
+<div class="project-tech">
+    <span class="tech-tag">HTML</span>
+    <span class="tech-tag">CSS</span>
+    <span class="tech-tag">JavaScript</span>
+    <span class="tech-tag">Netlify</span>
+</div>
+
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> View Project</a>
+                        <a href="https://ilmnexus.netlify.app/"><i class="fas fa-external-link-alt"></i> View Project</a>
                         <a href="#"><i class="fab fa-behance"></i> Behance</a>
                     </div>
                 </div>
@@ -815,16 +821,18 @@
                     <i class="fas fa-chart-line"></i>
                 </div>
                 <div class="project-content">
-                    <h3>Financial Dashboard</h3>
-                    <p>Interactive dashboard for visualizing financial data, trends, and analytics with real-time updates.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">React</span>
-                        <span class="tech-tag">D3.js</span>
-                        <span class="tech-tag">Python</span>
-                        <span class="tech-tag">FastAPI</span>
+                   <h3>ILMXAM Exam Platform</h3>
+<p>A secure, modern examination platform with real-time analytics, proctoring tools, and practice materials for institutions and learners.</p>
+<div class="project-tech">
+    <span class="tech-tag">React</span>
+    <span class="tech-tag">Node.js</span>
+    <span class="tech-tag">Express</span>
+    <span class="tech-tag">MongoDB</span>
+
+
                     </div>
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://ilmxam.netlify.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         <a href="#"><i class="fab fa-github"></i> GitHub</a>
                     </div>
                 </div>
@@ -835,16 +843,17 @@
                     <i class="fas fa-robot"></i>
                 </div>
                 <div class="project-content">
-                    <h3>AI Chatbot</h3>
-                    <p>An intelligent chatbot using natural language processing to provide customer support and assistance.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Python</span>
-                        <span class="tech-tag">TensorFlow</span>
-                        <span class="tech-tag">Flask</span>
-                        <span class="tech-tag">NLTK</span>
-                    </div>
+                    <h3>IBLAN Eyewear</h3>
+<p>An innovative eyewear store featuring blue-light protection, virtual try-on, and personalized eyewear matching for digital lifestyles.</p>
+<div class="project-tech">
+    <span class="tech-tag">React</span>
+    <span class="tech-tag">CSS</span>
+    <span class="tech-tag">JavaScript</span>
+    <span class="tech-tag">AR / WebGL</span>
+</div>
+
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://iblaneyewear.netlify.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         <a href="#"><i class="fab fa-github"></i> GitHub</a>
                     </div>
                 </div>
@@ -871,7 +880,7 @@
                         <span>September 5, 2025</span>
                         <span>5 min read</span>
                     </div>
-                    <a href="#" class="read-more">Read More →</a>
+                    <a href="./story1.html" class="read-more">Read More →</a>
                 </div>
             </div>
             
@@ -886,7 +895,7 @@
                         <span>August 22, 2025</span>
                         <span>7 min read</span>
                     </div>
-                    <a href="#" class="read-more">Read More →</a>
+                    <a href="./story2.html" class="read-more">Read More →</a>
                 </div>
             </div>
             
@@ -895,13 +904,13 @@
                     <i class="fas fa-rocket"></i>
                 </div>
                 <div class="blog-content">
-                    <h3>Launching Your First SaaS Product</h3>
-                    <p>A step-by-step guide to taking your software idea from concept to launch and beyond.</p>
-                    <div class="blog-meta">
+                   <h3>The Silent Power of Clean Code</h3>
+<p>Why writing clean, maintainable code is the hidden key to building lasting software, stronger teams, and a sustainable career in tech.</p>
+<div class="blog-meta">
                         <span>August 10, 2025</span>
                         <span>10 min read</span>
                     </div>
-                    <a href="#" class="read-more">Read More →</a>
+                    <a href="./story3.html" class="read-more">Read More →</a>
                 </div>
             </div>
         </div>
